Fix : Header padding overflow issue

--- a/styles/style.css
+++ b/styles/style.css
@@ -494,8 +494,8 @@ footer {
     .introduction h4,
     .introduction p,
     .introduction form {
-        padding-left: 10vw;
-        padding-right: 10vw;
+        padding-left: 0;
+        padding-right: 0;
     }
 
     .introduction p {
